src/dcp-producer.cc
@@ -145,7 +145,7 @@ DcpProducer::DcpProducer(EventuallyPersistentEngine &e, const void *cookie,
 
     enableExtMetaData = false;
 
-    backfillMgr = new BackfillManager(&engine_, this);
+    backfillMgr = new BackfillManager(&engine_);
 }
 
 DcpProducer::~DcpProducer() {
