src/dcp-stream.h
@@ -90,7 +90,7 @@ public:
            uint64_t vb_uuid, uint64_t snap_start_seqno,
            uint64_t snap_end_seqno);
 
-    virtual ~Stream() {}
+    virtual ~Stream();
 
     uint32_t getFlags() { return flags_; }
 
@@ -282,9 +282,7 @@ public:
                    uint64_t snap_end_seqno);
 
     ~NotifierStream() {
-        LockHolder lh(streamMutex);
         transitionState(STREAM_DEAD);
-        clear_UNLOCKED();
     }
 
     DcpResponse* next();
